tests/resources/invalid/type/definition/function_wrong_return.mamba
def f() -> Int => "Hello World"
